k8s/base/apps/authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: social-media-authservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  selector:
    app: authservice
  ports:
    - port: 8083
      targetPort: 8083
