k8s/base/apps/notificationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
        - name: notificationservice
          image: social-media-notificationservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
spec:
  selector:
    app: notificationservice
  ports:
    - port: 8084
      targetPort: 8084
