k8s/base/apps/postservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postservice
  template:
    metadata:
      labels:
        app: postservice
    spec:
      containers:
        - name: postservice
          image: social-media-postservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: postservice
spec:
  selector:
    app: postservice
  ports:
    - port: 8082
      targetPort: 8082
